--- a/styles/featured.module.css
+++ b/styles/featured.module.css
@@ -1,5 +1,5 @@
 .container {
-    height: calc(100vh - 100px);
+    height: 80vh;
     background-color: #d1411e;
     overflow: hidden;
     position: relative;
