--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -3,11 +3,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .leftFooter {
-    font-size: 22px;
     flex: 1;
     font-family: 'IM Fell French Canon SC', serif;
     color: white;
@@ -24,5 +22,10 @@
 
 .rightFooter > p {
     padding-top: 5px;
-    font-size: 18px;
+}
+
+@media screen and (max-width: 480px) {
+    .rightFooter{
+        display: none;
+    }
 }
