--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -8,6 +8,8 @@
     color: white;
     z-index: 999;
     box-shadow: rgba(0, 0, 0, 0.35) 0px -15px 35px -28px inset;
+    position: sticky;
+    width: 100%;
 }
 
 .items{
@@ -60,12 +62,15 @@
 .navList {
     margin:0 35px;
     font-weight: 500;
-    font-family: cursive, sans-serif;
     transition: all 0.3s ease-in-out;
 }
 
 .navList:hover {
     transform: scale(1.2);
+}
+
+.cart {
+    height: 30px;
 }
 
 .counter {
@@ -80,12 +85,16 @@
     font-weight: bold;
 }
 
-@media screen and (max-width:480px) {
+@media screen and (max-width:999px) {
     .items:nth-child(2) {
         display: none;
     }
 
     .items:nth-child(1) {
         flex: 5;
+        justify-content: flex-start;
+    }
+    .container {
+       padding: 0 20px;
     }
 }
