--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,6 +87,8 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   background-color: #fafafa;
+  scroll-behavior: smooth;
+  transition: all .5s ease-in-out;
 }
 
 a {
