--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -8,7 +8,8 @@
   color: white;
   z-index: 999;
   box-shadow: rgba(0, 0, 0, 0.35) 0px -15px 35px -28px inset;
-  position: sticky;
+  position: fixed;
+  top: 0;
   width: 100%;
 }
 
