--- a/styles/pizzaStory.module.css
+++ b/styles/pizzaStory.module.css
@@ -1,90 +1,99 @@
 .conatiner {
-    width: 100vw;
-    padding: 10vh 15vw 20px;
-    background-color: #fafafa;
+  width: 100vw;
+  padding: 10vh 15vw 20px;
+  background-color: #fafafa;
 }
 
 .headerTitle {
-    font-size: 60px;
-    text-align: center;
-    margin-bottom: 35px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-transform: uppercase;
-    color: #d1411e;
+  font-size: 60px;
+  text-align: center;
+  margin-bottom: 35px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  text-transform: uppercase;
+  color: #d1411e;
 }
 
 .story {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 .storyReverse {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    background: linear-gradient(90deg, rgba(250, 250, 250, 1) 0%, rgba(223, 207, 174, 1) 70%);
-    padding: 0;
-    width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  background: linear-gradient(
+    90deg,
+    rgba(250, 250, 250, 1) 0%,
+    rgba(223, 207, 174, 1) 70%
+  );
+  padding: 0;
+  width: 100%;
 }
 
 .pizzaText {
-    width: 35vw;
-    margin: auto;
-    
-    border: 1px solid rgba(0, 0, 0, 0.048);
-    background-color: white;
-    border-radius: 10px;
-    padding: 15px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;;
+  width: 35vw;
+  margin: auto;
+
+  border: 1px solid rgba(0, 0, 0, 0.048);
+  background-color: white;
+  border-radius: 10px;
+  padding: 15px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
-.title{
-    font-size: 35px;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 10px;
+.title {
+  font-size: 35px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .text {
-    font-size: 15px;
-    font-weight: 500;
-    color: rgb(122, 122, 122);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  color: rgb(122, 122, 122);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .button {
-    width: 20vw;
-    border: 2px solid #d1411e;
-    border-radius: 15px;
-    text-align: center;
-    padding: 10px;
-    font-weight: 600;
-    font-family: 'IM Fell French Canon SC',
-        serif;
-    margin: auto;
-    transition: all 0.7s;
+  width: 20vw;
+  border: 2px solid #d1411e;
+  border-radius: 15px;
+  text-align: center;
+  padding: 10px;
+  font-weight: 600;
+  font-family: "IM Fell French Canon SC", serif;
+  margin: auto;
+  transition: all 0.7s;
 }
 
 .button:hover {
-    background-color: #d1411e;
-    color: white;
-    cursor: pointer;
+  background-color: #d1411e;
+  color: white;
+  cursor: pointer;
 }
 
-@media screen and (max-width:650px) {
-    .story {
-        flex-wrap: wrap;
-        margin-bottom: 15px;
-        justify-content: space-around;
-    }
-    
-    .storyReverse {
-        flex-wrap: wrap;
-        margin-bottom: 15px;
-        justify-content: space-around;
-        background: rgba(223, 207, 174, 1);
-    }
+@media screen and (max-width: 650px) {
+  .story {
+    flex-wrap: wrap;
+    margin-bottom: 15px;
+    justify-content: space-around;
+  }
 
-    .pizzaText {
-        width: auto;
-    }
+  .storyReverse {
+    flex-wrap: wrap;
+    margin-bottom: 15px;
+    justify-content: space-around;
+    background: none;
+  }
+
+  .pizzaText {
+    width: auto;
+  }
+
+  .button {
+    margin-top: 35px;
+    width: 50vw;
+  }
 }
