--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -22,6 +22,7 @@
 
 .items:nth-child(2) {
   flex: 3;
+  letter-spacing: 1px;
 }
 
 .items:nth-child(3) {
@@ -68,7 +69,7 @@
 
 .navList {
   margin: 0 35px;
-  font-weight: 500;
+  font-weight: 400;
   transition: all 0.3s ease-in-out;
 }
 
